# alpacc

./: .gitignore  Makefile  alpacc.cabal  benchmark.sh
.github/workflows/: main.yml
app/: CudaProbe.hs  Main.hs
backends/c/: cli.c  lexer.c  parser.c
backends/cuda/: cli.cu  common.cu  lexer.cu  parser.cu  pse.cu  scan.cu
backends/futhark/: lexer.fut  parser.fut  test.fut
benchmarks/: Makefile  benchmark.sh  profile-gpu.sh  profile-gpu.slurm  sweep-cuda-lexer.sh  sweep-cuda-lexer.slurm  sweep-cuda-parser.sh  sweep-cuda-parser.slurm
benchmarks/json/: .gitignore  Makefile  futhark.pkg
benchmarks/lexer/json/: Makefile  json.alp
benchmarks/lexer/lisp/: Makefile  sexp.alp
benchmarks/lisp/: .gitignore  Makefile  README.md
benchmarks/parser/json/: Makefile
benchmarks/parser/lisp/: Makefile  data-1048576.in  parser-cuda  parser.cu
c/: lexer.c  parser.c
cuda/: TASKS.md  cli.cu  common.cu  lexer.cu  parser.cu  pse.cu  scan.cu
docs/: cuda-benchmark-protocol-bug.md  futhark-chunked-lexer-bug.md  wire-protocols.md
examples/: server_client.py
futhark/: parser.fut
grammars/: json.alp  sexp.alp
haskell-tests/: LL.hs  LLP.hs
src/Alpacc/: CFG.hs  Encode.hs  Grammar.hs  LL.hs  LLP.hs  Test.hs  Util.hs
src/Alpacc/Analysis/: CompositionHistogram.hs
src/Alpacc/Generator/: Analyzer.hs
src/Alpacc/Generator/C/: Generator.hs  Lexer.hs  Parser.hs
src/Alpacc/Generator/Cuda/: Generator.hs  Lexer.hs  Parser.hs
src/Alpacc/Generator/Futhark/: Futharkify.hs  Generator.hs  Lexer.hs  Parser.hs
src/Alpacc/Lexer/: DFA.hs  DFAParallelLexer.hs  Encode.hs  FSA.hs  HotLevels.hs  NFA.hs  ParallelLexing.hs
src/Alpacc/Parser/: LL.hs  LLP.hs
src/Alpacc/Test/: Lexer.hs  LexerParser.hs  Parser.hs
tests/: pse_test_main.cu  server_test.py  test-long-input.sh  testarithmetic.sh  testc.sh  testcuda.sh  testfuthark.sh  testjson-c.sh  testjson-cuda.sh  testjson-futhark.sh  testjson.sh  testpse.sh  testsexp.sh
