cabal-version:      2.4
name:               alpacc
version:            0.1.0.0
synopsis:           A parallel LL parser generator.

-- A longer description of the package.
-- description:
homepage:           https://github.com/diku-dk/alpacc
bug-reports:        https://github.com/diku-dk/alpacc/issues
license:            MIT
license-file:       LICENSE
author:             William Due
maintainer:         williamhenrichdue@gmail.com
category:           Language
extra-source-files:
  CHANGELOG.md
  backends/futhark/parser.fut
  backends/futhark/lexer.fut
  backends/futhark/test.fut
  backends/cuda/lexer.cu
  backends/cuda/common.cu
  backends/cuda/scan.cu
  backends/cuda/pse.cu
  backends/cuda/parser.cu
  backends/cuda/cli.cu
  backends/c/parser.c
  backends/c/lexer.c
  backends/c/cli.c

library
  default-language:   GHC2021
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
    DeriveAnyClass
    TemplateHaskell
    BlockArguments

  build-depends:
    , base
    , composition
    , containers
    , split
    , text
    , interpolate
    , extra
    , parallel
    , mtl
    , filepath
    , directory
    , deepseq-generics
    , deepseq
    , megaparsec
    , file-embed
    , split
    , utf8-string
    , array
    , random >= 1.3
    , QuickCheck
    , bytestring
    , binary
    , combinatorial

  exposed-modules:
    Alpacc.CFG
    Alpacc.Grammar
    Alpacc.Encode
    Alpacc.Parser.LL
    Alpacc.Parser.LLP
    Alpacc.Util
    Alpacc.HashTable
    Alpacc.Types
    Alpacc.Generator.Futhark.Lexer
    Alpacc.Generator.Futhark.Parser
    Alpacc.Generator.Futhark.Futharkify
    Alpacc.Generator.Futhark.Generator
    Alpacc.Generator.C.Generator
    Alpacc.Generator.C.Lexer
    Alpacc.Generator.C.Parser
    Alpacc.Generator.Cuda.Cudafy
    Alpacc.Generator.Cuda.Generator
    Alpacc.Generator.Cuda.Lexer
    Alpacc.Generator.Cuda.Parser
    Alpacc.Generator.Analyzer
    Alpacc.Lexer.RegularExpression
    Alpacc.Lexer.NFA
    Alpacc.Lexer.DFA
    Alpacc.Lexer.FSA
    Alpacc.Lexer.ParallelLexing
    Alpacc.Lexer.DFAParallelLexer
    Alpacc.Lexer.Encode
    Alpacc.Test
    Alpacc.Test.Parser
    Alpacc.Test.Lexer
    Alpacc.Test.LexerParser
    Alpacc.Random
    Alpacc.Analysis.CompositionHistogram

  hs-source-dirs:     src

  ghc-options: -O2 -Wall

executable alpacc
  default-language:   GHC2021
  ghc-options:        -threaded -O2 -rtsopts -Wall
  main-is:            Main.hs
  other-modules:
    CudaProbe

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
    DeriveGeneric
    TemplateHaskell

  build-depends:
    optparse-applicative
    , alpacc
    , filepath
    , deepseq-generics
    , deepseq
    , interpolate
    , containers
    , parallel
    , text
    , base
    , extra
    , composition
    , bytestring
    , process
    , directory
    , temporary

  hs-source-dirs:     app

test-suite test-alpacc
  default-language:   Haskell2010
  ghc-options:        -threaded -O2 -rtsopts
  other-modules:
    LL
    LLP
    RegularExpression
    CFG

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    TupleSections
    QuasiQuotes
    DeriveFunctor
    ExtendedDefaultRules
    DeriveGeneric
    TemplateHaskell
    ImportQualifiedPost

  type:             exitcode-stdio-1.0
  hs-source-dirs:   haskell-tests
  main-is:          Main.hs
  build-depends:
    , alpacc
    , interpolate
    , containers
    , base
    , mtl
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , text
    , utf8-string
